--- a/day0/qr-code-component-main/index.html
+++ b/day0/qr-code-component-main/index.html
@@ -8,10 +8,10 @@
   <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
-  <div class="card">
+  <main class="card">
     <div class="qr"></div>
     <p class="p1">Improve your front-end skills by building projects</p>
     <p class="p2">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-  </div>
+  </main>
 </body>
 </html>
